--- a/pages/posts/班会感想（补档）.md
+++ b/pages/posts/班会感想（补档）.md
@@ -3,7 +3,7 @@ title: 班会感想（补档）
 date: 2024-9-25
 updated: 2024-9-25
 categories: 生活
-image: https://raw.githubusercontent.com/xjtu-wjz/void2004/main/pics_for_post/shark.webp
+image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202024-09-17%20175054.webp
 tags:
   - 科研
   - 锐评
