--- a/pages/posts/神秘记录.md
+++ b/pages/posts/神秘记录.md
@@ -3,6 +3,7 @@ title: 神秘记录
 date: 2024-10-24
 updated: 2024-10-24
 categories: 生活
+image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/paper-reading-new.webp
 tags:
   - 生活
 top: 1
