--- a/pages/posts/神秘记录.md
+++ b/pages/posts/神秘记录.md
@@ -1,7 +1,7 @@
 ---
-title: 神秘记录
-date: 2024-10-24
-updated: 2024-10-24
+title: 歌声と夏--蝉鸣中的旋律
+date: 2024-10-31
+updated: 2024-10-31
 categories: 生活
 image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/paper-reading-new.webp
 tags:
@@ -9,3 +9,16 @@ tags:
 top: 1
 ---
 
+对日语歌一直有着特殊的偏好，从俳句开始就比较中意日语效率低但是句式偏工整的表达习惯，和隐藏于每一个助词，每一个语气词的中二感。
+
+最喜欢的几首旋律差别不小，但是普遍都是以summer(盛夏)或者chillhouse(寒舍)为基调，选几首特做分享。
+
+# 米津玄師--『灰色と青』
+青春的青色（青涩），以及未来的灰色，形成鲜明的对比。
+在日本“夏天结束了”有特别的含义：
+［夏が終わった］
+那是一夜长大的意思，那是恋爱无疾而终的征兆，那是青春消失殆尽的季节，那是从梦想跌入到现实的分界点，来不及跟夏天挥手告别的仓促人生，年轻时也对世间万物充满期待，眨眼间就落入了平庸之海。
+
+# 米津玄師--『のぼる花火』(打上花火)
+
+# ZONE--『secret base ～君がくれたもの～』
