--- a/pages/posts/神秘记录.md
+++ b/pages/posts/神秘记录.md
@@ -14,6 +14,8 @@ top: 1
 最喜欢的几首旋律差别不小，但是普遍都是以summer(盛夏)或者chillhouse(寒舍)为基调，选几首特做分享。
 
 # 米津玄師--『灰色と青』
+[灰色と青]（https://www.bilibili.com/video/BV1rm4y1w71P/?spm_id_from=333.337.search-card.all.click）
+
 青春的青色（青涩），以及未来的灰色，形成鲜明的对比。
 在日本“夏天结束了”有特别的含义：
 ［夏が終わった］
