--- a/pages/posts/ICML 2025投稿日记.md
+++ b/pages/posts/ICML 2025投稿日记.md
@@ -1,13 +1,15 @@
 ---
 title: ICML 2025投稿日记
-date: 2024-11-05
-updated: 2024-11-05
+date: 2024-11-11
+updated: 2024-11-11
 categories: Research
 image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/_2024-11-03%20103127.webp
 tags:
   - 科研
-  - PUL
+  - Generative Models
   - paper-posting
 top: 1
 ---
 
+# 11.11 确定方向
+特殊的日子，铝坨坨wave75 到了，同时也确定了具体做做加速推理以及高质量生成方向的工作，标杆是DDIM的论文，希望能提出像他们一样简单而优雅的方法。
