--- a/pages/posts/周记 week10 (11.11~11.17).md
+++ b/pages/posts/周记 week10 (11.11~11.17).md
@@ -16,7 +16,7 @@ top: 1
 
 因为要考试，所以不得不跟学长请假了，组里的事情暂时得放大概十天，这周和下周都有考试，一门凸优化一门数据挖掘。值得高兴的事是有的，便是终于迎来了人生中的第二个十年，也算是为了缅怀和有感而发吧，写了一篇长文发在了动态，虽说配了几张图片但只不过是为了防止空间看起来过于单调而被迫放的，大三以来拍的照片算是非常少了，甚至宝钢推送要求提供一张生活照，我都只能麻烦李处跟着我在学校到处跑看看哪里能拍出一张像样的。所以在博客上就只发文章吧，图片没必要搬运了。
 
-本科生涯一瞥/迟来的20岁的意识流
+# 本科生涯一瞥/迟来的20岁的意识流
 （首先为什么小初高甚至到大学年年生日都撞考试啊💩）
 
 最近在听灰色与青。
