--- a/pages/posts/ICML 2025投稿日记.md
+++ b/pages/posts/ICML 2025投稿日记.md
@@ -1,7 +1,7 @@
 ---
 title: ICML 2025投稿日记
-date: 2024-11-11
-updated: 2024-11-11
+date: 2024-11-27
+updated: 2024-11-27
 categories: Research
 image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/_2024-11-03%20103127.webp
 tags:
@@ -13,3 +13,8 @@ top: 1
 
 # 11.11 确定方向
 特殊的日子，铝坨坨wave75 到了，同时也确定了具体做做加速推理以及高质量生成方向的工作，标杆是DDIM的论文，希望能提出像他们一样简单而优雅的方法。
+
+# 11.27 idea
+从小考试季解脱出来了。虽然很确信课程内容对于我的未来发展价值非常小，而且绝大部分课程毫无营养可言，但为了绩点不是太难看，还是得稍微卷卷。
+
+比较具体的idea已经有了，开始调整方向深挖。
