--- a/pages/posts/生成模型训练加速.md
+++ b/pages/posts/生成模型训练加速.md
@@ -1,5 +1,5 @@
 ---
-title: Paper reading--扩散模型推理与采样加速
+title: Paper reading--生成模型训练加速
 date: 2024-11-28
 updated: 2023-11-28
 categories: Paper-reading
