--- a/pages/posts/生成模型训练加速.md
+++ b/pages/posts/生成模型训练加速.md
@@ -13,4 +13,9 @@ top: 1
 
 # REPRESENTATION ALIGNMENT FOR GENERATION: TRAINING DIFFUSION TRANSFORMERS IS EASIER THAN YOU THINK
 
+考虑：可以使用外部的视觉编码器加强生成模型的表示学习。只是在这期间需要考虑这几个问题：
+
+- 输入对齐。一般的视觉编码器处理的是干净的图片输入$x$，而扩散模型处理的是带噪声的，经过VAE压缩的输入向量$z(x)$；
+
+- 任务对齐。visual encoder一般是为了识别和分类而建立，但是扩散模型主要用于生成。
 
