--- a/pages/posts/生成模型训练加速.md
+++ b/pages/posts/生成模型训练加速.md
@@ -37,3 +37,22 @@ $$
 \mathcal{L} := \mathcal{L}_{\text{velocity}} + \lambda \mathcal{L}_{\text{REPA}}
 $$
 
+# Return of Unconditional Generation: A Self-supervised Representation Generation Method
+
+这次使用无条件自生成的图像表示作为监督对提升图像生成效果，方法名为representation conditioned guidance (RCG),泛化能力强，classifier-guidance也可以被融入这套表示引导生成框架中。
+
+大体来说，RCG核心分为三个部分：(a) image encoder，将图像转换为noisy representation； (b) representation encoder， 负责学习将带噪声的表示转换为符合原图像分布的表示； (c) image encoder， 学会使用表示的约束加强图像生成的能力。
+
+对于表示学习，设计了一种新的模块--representation diffusion model(RDM), 负责生成可用于作为监督的表示，也就是representation generator。结构如下：
+
+![alt text](../../materials/加速1.png)
+
+主要由一个线性映射头，还有若干个残差连接块组成，其中的主要参数就是残差块数量和向量维度。整体流程如下：
+
+![alt text](../../materials/加速2.png)
+
+由representation generator生成表示，在image generator中作为监督进行约束。图像生成器中，对于每一个推理步骤都会进行两次操作：生成不带表示约束的logit $l_u$和带表示约束的$l_c$，每一次对于掩码token最终给出的$l_g$由两者拼接：
+
+$$l_g = l_c + \tau (l_c - l_u)$$
+
+$\tau$负责调节指导尺度。
