--- a/pages/posts/周记 week12 (11.25~12.1).md
+++ b/pages/posts/周记 week12 (11.25~12.1).md
@@ -2,10 +2,32 @@
 title: 周记 week12 (11.25~12.01)
 date: 2024-12-01
 updated: 2022-12-01
-image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20241124190611.webp
+image: https://raw.githubusercontent.com/xjtu-wjz/void2004/refs/heads/main/pics_for_post/Pasted%20image%2020241203144131.webp
 categories: 生活
 tags:
   - 周记
   - 科研
 top: 1
 ---
+
+
+暂时结束考试，回归科研之后的第一周吧。
+
+# 学业
+因为刚从考试周回来，状态有少许下滑，因此几篇经典文献又重新读了下。接着往这个采样和训练加速的方向又读了几篇，不禁感慨下generative model方向的研究真的永远不缺佳作，今年iclr排名靠前的好几篇高分文章也是做的生成模型方向。
+
+总的来说，采样这块比较精细，公式和proof比较扎实；训练那块的话就稍微偏工程一些，主要是各种新模块范式的设计和拼接，虽说两者最后大概率殊途同归。
+
+再就是组会的事情了，很难相信一篇ICLR2025拿到688的高分，proof看起来非常扎实的一篇文章竟然是师兄带着哈工威的同龄人赶了6，8天rush出来的，非常难以置信，或者说合作过程中所有人齐心协力，可以随时对接，而且有大量现成积累的情况下这些都是水到渠成的事情，只是原先待的环境过于恶劣，以至于令我忘记了科研并不是一个人的单打独斗，而是各位优秀的学者互相合作共同成就。
+
+来实习的短短一个月内基本上每一个星期都会被震撼到。现在我手里能调度的显卡都快赶上整个计算机学院了，我想这也就是为什么西交在大AI时代下只能捡一点边角料填饱肚子的原因--资源极度匮乏->有想法的生源也不愿意到这来->成果拉胯，继续分不到资源。原先在的组里面师兄们简直是在写本子的空隙间做科研，而且也经常有一篇论文挂了好几个不认识的人（我和李处的工作其实都是，最后莫名其妙地作者多了一个）。在这些组里面，学生的文章只是老师拉关系社交的工具，至于说学术理想和学术追求，估计也只能是放在口头上了。虽然师兄貌似最后被导师安排了一个还凑合的去向，但博士期间绝大多数本该用于提升自己，享受人生，以及深耕领域的时间被用来写本子，还是一件非常悲哀的事情。
+
+新型的项目记录仓库也让我非常感兴趣，甚至可以记录每一次组会的内容，研究中的milestone也可以记下来--这和我的周记和投稿日记其实非常相似，只是我确实从来没想到还可以使用github对这些内容进行管理，甚至更深层次的整合，兴许后面的投稿日记更新也会搬迁到那里去。
+
+未来规划先整熟集群，然后学一点docker。
+
+# 签证
+最近就得办签证了，不然的话大概率寒假之前是下不来的。依照和黄学长的聊天内容来看，实习应该还是有比较充足的时间的，在那边就安安心心先赶两周稿。
+
+这里需要狠狠吐槽下学校的官方交流群。钱班和其他几个试验班之流我不是很能理解究竟在干什么，降智的问题一大堆，而真正申请流程麻烦的地方要么不问要么不敢问，媒介素养和办事效率差得令人发指。实在不想和一帮没什么办事能力的人相处。在瑞士那边估计也主要找cern的研究员多聊聊天，然后去本地感受下风土人情，钱院的人的素养能力不敢恭维。
+
