--- a/pages/posts/ICML 2025投稿日记.md
+++ b/pages/posts/ICML 2025投稿日记.md
@@ -18,3 +18,9 @@ top: 1
 从小考试季解脱出来了。虽然很确信课程内容对于我的未来发展价值非常小，而且绝大部分课程毫无营养可言，但为了绩点不是太难看，还是得稍微卷卷。
 
 比较具体的idea已经有了，开始调整方向深挖。
+
+# 12.05 coding&集群&调研
+
+和原来的组不一样，实验室现在用的是集群管理工具，统一用docker配环境然后运行yaml跑代码。这样子环境分明而且下载方便，但确实非常麻烦，事实上到现在我也只能调得动实验室现有的image，自己自定义的image老是出一大堆问题，唉一小时接一小时的破防。
+
+扩散模型这块的代码有非常多高质量的开源工作，比原来我做的无监督学习要好得多，估计也是工程量太大的缘故所以大家为了涨citation也就必须得好好得整理自己的代码。话虽如此，代码的封装实在太多，齐赛宁组的code风格一直走极简风，读起来就很顺利，但是kaiming组的码风不知为何在RCG之后变成了文件夹战神，今天找一个model()的实现倒了十几道弯才在犄角旮旯里找到，而且命名方式也很奇怪。读代码的过程总的来说确实是不好受的，但是还是得继续一份一份读下去，后面赶稿的时候至少不能被实验耽误了。
